debian: Update README

--- a/debian/README.html
+++ b/debian/README.html
@@ -14,6 +14,16 @@ Make sure you enable it when you see dependecy problems.</p>
 <h2>Release Builds</h2>
 
 <p>
+<strong>icinga-buster</strong>
+<a href="dists/icinga-buster/main/binary-i386/Packages">i386</a>
+<a href="dists/icinga-buster/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/debian icinga-buster main
+deb-src http://packages.icinga.com/debian icinga-buster main
+</pre>
+
+<p>
 <strong>icinga-stretch</strong>
 <a href="dists/icinga-stretch/main/binary-i386/Packages">i386</a>
 <a href="dists/icinga-stretch/main/binary-amd64/Packages">amd64</a>
@@ -23,33 +33,13 @@ deb http://packages.icinga.com/debian icinga-stretch main
 deb-src http://packages.icinga.com/debian icinga-stretch main
 </pre>
 
-<p>
-<strong>icinga-jessie</strong>
-<a href="dists/icinga-jessie/main/binary-i386/Packages">i386</a>
-<a href="dists/icinga-jessie/main/binary-amd64/Packages">amd64</a>
-</p>
-<pre>
-deb http://packages.icinga.com/debian icinga-jessie main
-deb-src http://packages.icinga.com/debian icinga-jessie main
-</pre>
-
-<p>
-<strong>icinga-wheezy</strong>
-<a href="dists/icinga-wheezy/main/binary-i386/Packages">i386</a>
-<a href="dists/icinga-wheezy/main/binary-amd64/Packages">amd64</a>
-</p>
-<pre>
-deb http://packages.icinga.com/debian icinga-wheezy main
-deb-src http://packages.icinga.com/debian icinga-wheezy main
-</pre>
-
 <p> Or if you are a lazy one:</p>
 
 <pre>
 DIST=$(awk -F"[)(]+" '/VERSION=/ {print $2}' /etc/os-release); \
- echo "deb http://packages.icinga.com/debian icinga-${DIST} main" > \
+ echo "deb http://packages.icinga.com/debian icinga-${DIST} main" &gt; \
  /etc/apt/sources.list.d/${DIST}-icinga.list
- echo "deb-src http://packages.icinga.com/debian icinga-${DIST} main" >> \
+ echo "deb-src http://packages.icinga.com/debian icinga-${DIST} main" &gt;&gt; \
  /etc/apt/sources.list.d/${DIST}-icinga.list
 </pre>
 
@@ -61,6 +51,16 @@ please use the release packages instead.
 </p>
 
 <p>
+<strong>icinga-buster-snapshots</strong>
+<a href="dists/icinga-buster-snapshots/main/binary-i386/Packages">i386</a>
+<a href="dists/icinga-buster-snapshots/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/debian icinga-buster-snapshots main
+deb-src http://packages.icinga.com/debian icinga-buster-snapshots main
+</pre>
+
+<p>
 <strong>icinga-stretch-snapshots</strong>
 <a href="dists/icinga-stretch-snapshots/main/binary-i386/Packages">i386</a>
 <a href="dists/icinga-stretch-snapshots/main/binary-amd64/Packages">amd64</a>
@@ -70,32 +70,12 @@ deb http://packages.icinga.com/debian icinga-stretch-snapshots main
 deb-src http://packages.icinga.com/debian icinga-stretch-snapshots main
 </pre>
 
-<p>
-<strong>icinga-jessie-snapshots</strong>
-<a href="dists/icinga-jessie-snapshots/main/binary-i386/Packages">i386</a>
-<a href="dists/icinga-jessie-snapshots/main/binary-amd64/Packages">amd64</a>
-</p>
-<pre>
-deb http://packages.icinga.com/debian icinga-jessie-snapshots main<br/>
-deb-src http://packages.icinga.com/debian icinga-jessie-snapshots main
-</pre>
-
-<p>
-<strong>icinga-wheezy-snapshots</strong>
-<a href="dists/icinga-wheezy-snapshots/main/binary-i386/Packages">i386</a>
-<a href="dists/icinga-wheezy-snapshots/main/binary-amd64/Packages">amd64</a>
-</p>
-<pre>
-deb http://packages.icinga.com/debian icinga-wheezy-snapshots main
-deb-src http://packages.icinga.com/debian icinga-wheezy-snapshots main
-</pre>
-
 <p> Or if you are a lazy one:</p>
 
 <pre>
 DIST=$(awk -F"[)(]+" '/VERSION=/ {print $2}' /etc/os-release); \
- echo "deb http://packages.icinga.com/debian icinga-${DIST}-snapshots main" > \
+ echo "deb http://packages.icinga.com/debian icinga-${DIST}-snapshots main" &gt; \
  /etc/apt/sources.list.d/${DIST}-icinga-snapshots.list
- echo "deb-src http://packages.icinga.com/debian icinga-${DIST}-snapshots main" >> \
+ echo "deb-src http://packages.icinga.com/debian icinga-${DIST}-snapshots main" &gt;&gt; \
  /etc/apt/sources.list.d/${DIST}-icinga-snapshots.list
 </pre>
