raspbian: Add buster and remove jessie

--- a/raspbian/README.html
+++ b/raspbian/README.html
@@ -9,21 +9,21 @@ curl https://packages.icinga.com/icinga.key | apt-key add -
 <h2>Release Builds</h2>
 
 <p>
+<strong>icinga-buster</strong>
+<a href="dists/icinga-buster/main/binary-armhf/Packages">armhf</a>
+</p>
+<pre>
+deb http://packages.icinga.com/raspbian icinga-buster main
+deb-src http://packages.icinga.com/raspbian icinga-buster main
+</pre>
+
+<p>
 <strong>icinga-stretch</strong>
 <a href="dists/icinga-stretch/main/binary-armhf/Packages">armhf</a>
 </p>
 <pre>
 deb http://packages.icinga.com/raspbian icinga-stretch main
 deb-src http://packages.icinga.com/raspbian icinga-stretch main
-</pre>
-
-<p>
-<strong>icinga-jessie</strong>
-<a href="dists/icinga-jessie/main/binary-armhf/Packages">armhf</a>
-</p>
-<pre>
-deb http://packages.icinga.com/raspbian icinga-jessie main
-deb-src http://packages.icinga.com/raspbian icinga-jessie main
 </pre>
 
 <p>Or if you are a lazy one:</p>
@@ -44,21 +44,21 @@ please use the release packages instead.
 </p>
 
 <p>
+<strong>icinga-buster-snapshots</strong>
+<a href="dists/icinga-buster-snapshots/main/binary-armhf/Packages">armhf</a>
+</p>
+<pre>
+deb http://packages.icinga.com/raspbian icinga-buster-snapshots main
+deb-src http://packages.icinga.com/raspbian icinga-buster-snapshots main
+</pre>
+
+<p>
 <strong>icinga-stretch-snapshots</strong>
 <a href="dists/icinga-stretch-snapshots/main/binary-armhf/Packages">armhf</a>
 </p>
 <pre>
 deb http://packages.icinga.com/raspbian icinga-stretch-snapshots main
 deb-src http://packages.icinga.com/raspbian icinga-stretch-snapshots main
-</pre>
-
-<p>
-<strong>icinga-jessie-snapshots</strong>
-<a href="dists/icinga-jessie-snapshots/main/binary-armhf/Packages">armhf</a>
-</p>
-<pre>
-deb http://packages.icinga.com/raspbian icinga-jessie-snapshots main<br/>
-deb-src http://packages.icinga.com/raspbian icinga-jessie-snapshots main
 </pre>
 
 <p>Or if you are a lazy one:</p>
