--- a/epel/README.html
+++ b/epel/README.html
@@ -10,33 +10,27 @@
 <h2>Requirements</h2>
 <p>We require some dependencies from the EPEL repository itself, so make sure to enable it.</p>
 
-<h3>CentOS 6 / 7</h3>
+<h3>CentOS</h3>
 <code>yum install epel-release</code>
 
-<p>Icinga Web 2 will also require PHP via the SCL repository system:</p>
+<p>On CentOS 7 Icinga Web 2 will also require PHP via the SCL repository system:</p>
 <code>yum install centos-release-scl</code>
 
-<h3>RedHat 6 / 7 and compatible</h3>
-<pre>yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-
-# or for RedHat 6
+<h3>RedHat and compatible</h3>
+<pre>yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
 yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm</pre>
 
-<p>Icinga Web 2 will also require PHP via the SCL repository system:</p>
+<p>On RHEL 7 Icinga Web 2 will also require PHP via the SCL repository system:</p>
 <pre>subscription-manager repos --enable rhel-7-server-optional-rpms
-subscription-manager repos --enable rhel-server-rhscl-7-rpms
-
-# or for RedHat 6
-subscription-manager repos --enable rhel-6-server-optional-rpms
-subscription-manager repos --enable rhel-server-rhscl-6-rpms</pre>
+subscription-manager repos --enable rhel-server-rhscl-7-rpms</pre>
 
 <h2>Release Builds</h2>
 
 <pre>rpm --import https://packages.icinga.com/icinga.key
 
+yum install https://packages.icinga.com/epel/icinga-rpm-release-8-latest.noarch.rpm
 yum install https://packages.icinga.com/epel/icinga-rpm-release-7-latest.noarch.rpm
-
-# or for RedHat 6
 yum install https://packages.icinga.com/epel/icinga-rpm-release-6-latest.noarch.rpm</pre>
 
 <h2>Snapshot Builds</h2>
