epel: Fix bad release RPM links

--- a/epel/README.html
+++ b/epel/README.html
@@ -17,7 +17,7 @@
 <code>yum install centos-release-scl</code>
 
 <h3>RedHat and compatible</h3>
-<pre>yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+<pre>dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
 yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
 yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm</pre>
 
@@ -29,7 +29,7 @@ subscription-manager repos --enable rhel-server-rhscl-7-rpms</pre>
 
 <pre>rpm --import https://packages.icinga.com/icinga.key
 
-yum install https://packages.icinga.com/epel/icinga-rpm-release-8-latest.noarch.rpm
+dnf install https://packages.icinga.com/epel/icinga-rpm-release-8-latest.noarch.rpm
 yum install https://packages.icinga.com/epel/icinga-rpm-release-7-latest.noarch.rpm
 yum install https://packages.icinga.com/epel/icinga-rpm-release-6-latest.noarch.rpm</pre>
 
