--- a/openSUSE/README.html
+++ b/openSUSE/README.html
@@ -9,6 +9,18 @@ zypper ar https://packages.icinga.com/openSUSE/ICINGA-release.repo
 zypper ref
 </pre>
 
+<h2>Testing (Pre Release) Builds</h2>
+
+<p class="warning">
+WARNING: These are pre release builds which are not recommended for production use. If you're setting up a production system
+please use the release packages instead.
+</p>
+
+<pre>
+zypper ar https://packages.icinga.com/openSUSE/ICINGA-testing.repo
+zypper ref
+</pre>
+
 <h2>Snapshot Builds</h2>
 
 <p class="warning">
