Add README for Focal Fossa (Ubuntu 20.04 LTS)

--- a/ubuntu/README.html
+++ b/ubuntu/README.html
@@ -8,6 +8,14 @@ curl https://packages.icinga.com/icinga.key | apt-key add -
 
 <h2>Release Builds</h2>
 
+<p><strong>icinga-focal</strong>
+<a href="dists/icinga-focal/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/ubuntu icinga-focal main
+deb-src http://packages.icinga.com/ubuntu icinga-focal main
+</pre>
+
 <p><strong>icinga-bionic</strong>
 <a href="dists/icinga-bionic/main/binary-i386/Packages">i386</a>
 <a href="dists/icinga-bionic/main/binary-amd64/Packages">amd64</a>
@@ -43,6 +51,14 @@ These are pre release builds which are not recommended for production use. If yo
 please use the release packages instead.
 </p>
 
+<p><strong>icinga-focal-testing</strong>
+<a href="dists/icinga-focal-testing/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/ubuntu icinga-focal-testing main
+deb-src http://packages.icinga.com/ubuntu icinga-focal-testing main
+</pre>
+
 <p><strong>icinga-bionic-testing</strong>
 <a href="dists/icinga-bionic-testing/main/binary-i386/Packages">i386</a>
 <a href="dists/icinga-bionic-testing/main/binary-amd64/Packages">amd64</a>
@@ -77,6 +93,14 @@ deb-src http://packages.icinga.com/ubuntu icinga-xenial-testing main
 These are snapshot builds which are not suitable for production use. If you're setting up a production system
 please use the release packages instead.
 </p>
+
+<p><strong>icinga-focal-snapshots</strong>
+<a href="dists/icinga-focal-snapshots/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/ubuntu icinga-focal-snapshots main
+deb-src http://packages.icinga.com/ubuntu icinga-focal-snapshots main
+</pre>
 
 <p><strong>icinga-bionic-snapshots</strong>
 <a href="dists/icinga-bionic-snapshots/main/binary-i386/Packages">i386</a>
