Ubuntu/README: Add Ubuntu Groovy Gorilla

--- a/ubuntu/README.html
+++ b/ubuntu/README.html
@@ -8,6 +8,14 @@ curl https://packages.icinga.com/icinga.key | apt-key add -
 
 <h2>Release Builds</h2>
 
+<p><strong>icinga-groovy</strong>
+<a href="dists/icinga-groovy/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/ubuntu icinga-groovy main
+deb-src http://packages.icinga.com/ubuntu icinga-groovy main
+</pre>
+
 <p><strong>icinga-focal</strong>
 <a href="dists/icinga-focal/main/binary-amd64/Packages">amd64</a>
 </p>
@@ -51,6 +59,14 @@ These are pre release builds which are not recommended for production use. If yo
 please use the release packages instead.
 </p>
 
+<p><strong>icinga-groovy-testing</strong>
+<a href="dists/icinga-groovy-testing/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/ubuntu icinga-groovy-testing main
+deb-src http://packages.icinga.com/ubuntu icinga-groovy-testing main
+</pre>
+
 <p><strong>icinga-focal-testing</strong>
 <a href="dists/icinga-focal-testing/main/binary-amd64/Packages">amd64</a>
 </p>
@@ -93,6 +109,14 @@ deb-src http://packages.icinga.com/ubuntu icinga-xenial-testing main
 These are snapshot builds which are not suitable for production use. If you're setting up a production system
 please use the release packages instead.
 </p>
+
+<p><strong>icinga-groovy-snapshots</strong>
+<a href="dists/icinga-groovy-snapshots/main/binary-amd64/Packages">amd64</a>
+</p>
+<pre>
+deb http://packages.icinga.com/ubuntu icinga-groovy-snapshots main
+deb-src http://packages.icinga.com/ubuntu icinga-groovy-snapshots main
+</pre>
 
 <p><strong>icinga-focal-snapshots</strong>
 <a href="dists/icinga-focal-snapshots/main/binary-amd64/Packages">amd64</a>
